[PROD-1919] Fix Toolbar spacing in message editor

--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -9707,7 +9707,7 @@ input#send-to-input {
   visibility: hidden;
   transition: all ease 0.3s;
   height: 0;
-  left: 0;
+  left: 10px;
   overflow: hidden;
   right: 0;
 }
