--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -9707,7 +9707,7 @@ input#send-to-input {
   visibility: hidden;
   transition: all ease 0.3s;
   height: 0;
-  right: 0;
+  right: 10px;
   overflow: hidden;
   left: 0;
 }
